# simple-si-units

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: build-main.yml  build-n-test.yml  build-staging.yml  code-coverage.yml  unit-test-main.yml  unit-test-staging.yml
code-generator/: .gitignore  code_generator.py  measurement-units.csv  misc.py  templates.py  unit-type-conversions.csv  unit-type-definitions.csv
code-generator/ref/: lib.rs
simple-si-units/: .gitignore  Cargo.toml  README.md  cargo-test.sh
simple-si-units-core/: .gitignore  Cargo.toml  README.md
simple-si-units-core/src/: lib.rs
simple-si-units-macros/: .gitignore  Cargo.toml  README.md
simple-si-units-macros/src/: lib.rs
simple-si-units-macros/tests/: macro_tests.rs
simple-si-units-macros/tests/expand/: derive_tester.rs
simple-si-units/src/: base.rs  chemical.rs  electromagnetic.rs  geometry.rs  lib.rs  mechanical.rs  nuclear.rs
simple-si-units/tests/: api_tests.rs  examples1.rs  examples2.rs  integration_tests.rs  uom_integration_tests.rs  uom_vs_ssu_example.rs
src/: lib.rs
