[package]
name = "simple-si-units"
authors = ["Christopher Collin Hall"]
version = "0.0.8"
edition = "2021"
license = "MPL-2"
description = "A Rust library providing base SI Units and common conversions. SI Units are provided as templated types so that you can write APIs that enforce correct units"
repository = "https://github.com/DrPlantabyte/simple-si-units"
homepage = "https://github.com/DrPlantabyte/simple-si-units"
readme = "REAMDME.md"
documentation = "https://docs.rs/simple-si-units/"
keywords = ["si-units", "units", "physics", "science", "measurement"]
categories = ["science", "simulation"] # see https://crates.io/category_slugs

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# no required dependencies
serde = { version = "1.0", optional = true, features = ["derive"] }

[dev-dependencies]
# no testing dependencies

[build-dependencies]
# build.rs dependencies
regex="1.6"
