[package]
name = "simple-si-units"
authors = ["Christopher Collin Hall"]
version = "0.3.5"
edition = "2021"
license = "MPL-2.0"
description = "A Rust library providing base SI Units and common conversions. SI Units are provided as templated types so that you can write APIs that enforce correct units"
repository = "https://github.com/DrPlantabyte/simple-si-units"
homepage = "https://github.com/DrPlantabyte/simple-si-units/tree/main/simple-si-units"
readme = "README.md"
documentation = "https://docs.rs/simple-si-units/"
keywords = ["si-units", "units", "physics", "science", "measurement"]
categories = ["science", "simulation"] # see https://crates.io/category_slugs

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# required
simple-si-units-macros = "0.3"
simple-si-units-core = "0.3"
#simple-si-units-macros = { path = "../simple-si-units-macros" }
#simple-si-units-core = { path = "../simple-si-units-core" }
# optional
serde = { version = "1.0", optional = true, features = ["derive"] }
uom = { version = "0.33", optional = true, features = ["si", "std", "f64"]}

[dev-dependencies]
# test deps
num-complex = "0.4"
num-bigfloat = "1.6"
astro-float = "0.4"
num-traits = "0.2"
num = "0.4"
uom = "0.33"

[build-dependencies]
# no build dependencies
