[package]
name = "simple-si-units"
authors = ["Christopher Collin Hall"]
version = "1.1.0"
edition = "2021"
license = "MPL-2.0"
description = "A Rust library providing base SI Units and common conversions. SI Units are provided as templated types so that you can write APIs that enforce correct units"
repository = "https://github.com/DrPlantabyte/simple-si-units"
homepage = "https://github.com/DrPlantabyte/simple-si-units/tree/main/simple-si-units"
readme = "README.md"
documentation = "https://docs.rs/simple-si-units/"
keywords = ["si-units", "units", "physics", "science", "measurement"]
categories = ["science", "simulation", "no-std", "no-std::no-alloc"] # see https://crates.io/category_slugs

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# required
simple-si-units-macros = "1.0.1"
simple-si-units-core = "1.0.1"
#simple-si-units-macros = { path = "../simple-si-units-macros" }
#simple-si-units-core = { path = "../simple-si-units-core" }
# optional
serde = { version = "1.0", optional = true, features = ["derive"] }
uom = { version = "0.34", optional = true, features = ["si", "f64"]}
num-complex = { version = "0.4", optional = true }
num-bigfloat = { version = "1.6", optional = true }

[dev-dependencies]
# test deps
serde = { version = "1.0", features = ["derive"] }
num-complex = "0.4"
num-bigfloat = "1.6"
num-traits = "0.2"
num = "0.4"
uom = "0.34"

[build-dependencies]
# no build dependencies
